[package]
name = "lofi-party"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
dotenv = "0.15.0"
futures-util = "0.3.31"
log = { version = "0.4.25", features = ["kv_serde"] }
names = "0.14.0"
serde = "1.0.228"
serde_json = "1.0.145"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["full"] }
tokio-tungstenite = "0.27.0"
tracing-subscriber = "0.3.19"
mongodb = { version = "3.3.0"}
actix-web = "4.11.0"
actix-cors = "0.7.1"
